# slidesv3

./: .gitignore  Cargo.toml  fmt.cmd  justfile  run.cmd  runAllExamples.cmd  test.cmd
builtin/: std.sld
examples/: 1.sld  2.sld  arrays.sld  arrays_error.sld  arrays_in_arrays.sld  cast.sld  comments.sld  foo.sld  functions.sld  generics.sld  integers.sld  librariesExample.sld  linked_list.sld  logical_operators.sld  math.sld  mylib.sld  none.sld  presentation.sld  ranges.sld  string_bomb.sld  strings.sld  structs.sld  type_boxing.sld  weird_arrays.sld
lang-tests/: Cargo.toml
lang-tests/src/: main.rs
reaktor/: Cargo.toml
reaktor/src/: cli_arguments.yaml  main.rs
slides/: Cargo.toml  build.rs
slides/builtin/: std.sld
slides/src/: binder.rs  debug.rs  dependency_resolver.rs  diagnostics.rs  evaluator.rs  instruction_converter.rs  lexer.rs  lib.rs  parser.rs  text.rs  value.rs
src/: binder.rs  debug.rs  diagnostics.rs  evaluator.rs  instruction_converter.rs  lexer.rs  lib.rs  main.rs  parser.rs  text.rs  value.rs
src/binder/: bound_nodes.rs  operators.rs  tests.rs  typing.rs
src/instruction_converter/: instruction.rs  tests.rs
src/lexer/: syntax_token.rs  tests.rs
src/parser/: match_token.rs  syntax_nodes.rs  tests.rs
tests/: binder_failed.diagnostics  binder_failed.sld  binder_successful.out  binder_successful.sld
tests/arrays/: arrays.out  arrays.sld  arrays_error.out  arrays_error.sld  arrays_runtime_error.out  arrays_runtime_error.sld
tests/basics/: comments.out  comments.sld  functions.out  functions.sld  integers.out  integers.sld  (+8 more)
(+86 files in other folders)
