[package]
name = "lang-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
colorized = "1.0.0"
futures = "0.3.25"
glob = "0.3.1"
tokio = { version = "1.24.1", features = ["full"] }
